Fix T69166: built-in start-up file has unnecessary screen data